# pokemon-mega-grouping

./: Cargo.toml  README.md  type_coverage.md  type_coverage_primals_pogo.md
data/: megas.json  primals.json
ptcgp/: colorless_energy_typed_pokemon.md
src/: core.rs  group_by_types.rs  main.rs  min_mega_pokemon_type_coverage.rs  pokemon.rs  type.rs
