[package]
name = "pokemongo-analysis"
version = "0.1.0"
authors = ["Michael Cheung <mc.kingho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamma = "0.9"
num_enum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"